<resources>
    <string name="app_name">Programmable Chat</string>
    <string name="title_activity_login">Sign in</string>

    <!--Strings related to menu page -->
    <string name="main_menu">Menu</string>
    <string name="messaging">Communicate</string>
    <string name="notification">Notification</string>
    <string name="emergency">Emergency</string>
    <string name="settings">Settings</string>
    <string name="return_menu">Main Screen</string>
    <string name="feature">Features</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings when creating Channel -->
    <string name="public_channel">Create public channel</string>
    <string name="private_channel">Create private channel </string>
    <string name="logout">Log out </string>
    <string name="title_add_channel_name">Add Channel Name</string>
    <string name="incoming_call"></string>
    <string name="incoming_call_message">Received a channel invite. </string>
    <string name="join">Join</string>
    <string name="decline">Decline</string>
    <string name="create_public_channel">Create Public Channel</string>
    <string name="create_private_channel">Create Private Channel</string>
    <string name="log_out">Log out</string>
    <string name="options">Options</string>
    <string name="typing">Type Message</string>
    <string name="action_settings">Settings</string>
    <string name="title_invite_member">Invite Member</string>
    <string name="title_add_member">Add Member</string>

    <string name="logout_prompt_message">Are you sure you want to logout?</string>

    <string name="default_channel_name">General Channel</string>
    <string name="default_channel_unique_name">general</string>
    <string name="new_channel_prompt">Enter a name for the new channel:</string>
    <string name="generic_error">An error occurred, please try again</string>
    <string name="message_deletion_forbidden">You cannot delete this channel</string>
    <string name="loading_channels_message">Loading channel information</string>
    <string name="channel_name_required_message">Channel name cannot be empty</string>
    <string name="channel_delete_prompt_message">Are you sure you want to delete this channel?</string>
    <string name="channel_name_equals_default_name">You cannot create a channel with the default channel\'s name</string>

    <!-- Strings related to login -->
    <string name="logout_text">Logout</string>
    <string name="title_activity_main_chat">General Channel</string>
    <string name="username_placeholder">username</string>
    <string name="password_placeholder">password</string>
    <string name="full_name_placeholder">full name</string>
    <string name="email_placeholder">email address</string>
    <string name="twilio_first_line">A simple chat app built using the</string>
    <string name="twilio_second_line">Twilio IP Messaging API</string>
    <string name="login_all_fields_required">All fields are required</string>
    <string name="login_user_progress_message">signing in…</string>
    <string name="register_user_progress_message">registering user…</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
